# ghspy

./: README.md  pyproject.toml
ghspy/: __main__.py  analyzer.py  cli.py  display.py  github_api.py
gitspy/: __init__.py  __main__.py  cli.py  github_api.py
