[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitspy"
version = "0.1.0"
description = "GitHub OSINT tool — extract intelligence from any GitHub user profile"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "shazeus"},
]
keywords = ["github", "osint", "reconnaissance", "cli", "security", "intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/shazeus/gitspy"
Repository = "https://github.com/shazeus/gitspy"
Issues = "https://github.com/shazeus/gitspy/issues"

[project.scripts]
gitspy = "gitspy.cli:cli"

[tool.setuptools.packages.find]
include = ["gitspy*"]
